static/css/style.css
@import url(https://fonts.bunny.net/css?family=inter:100,200,300,400,500,600|rubik:300,300i,400,400i,500,500i,600,600i,700,700i,800);

:root {
  --pico-font-family: Inter, "Helvetica Neue", sans-serif;
  --pico-line-height: 1.65;
  --pico-font-size: calc(14px + 0.390625vw);
  --pico-font-weight: 375;
  font-feature-settings: normal;
  font-variation-settings: normal;
}

@media only screen and (prefers-color-scheme: dark) {
  :root:not([data-theme]) {
    --pico-background-color: #11191f;
    --pico-color: #eee;
    --pico-text-selection-color: rgba(107,180,78, 0.50);
    --pico-primary: #6bb44e;
    --pico-primary-background: #4a7a36;
    --pico-primary-underline: rgba(107,180,78, 0.75);
    --pico-primary-hover: #79bd5c;
    --pico-primary-hover-background: #79bd5c;
    --pico-primary-focus: #a8d394;
    --pico-primary-inverse: #fff;
  }
}

[data-theme=dark] {
    --pico-background-color: #11191f;
    --pico-color: #eee;
    --pico-text-selection-color: rgba(107,180,78, 0.50);
    --pico-primary: #6bb44e;
    --pico-primary-background: #4a7a36;
    --pico-primary-underline: rgba(107,180,78, 0.75);
    --pico-primary-hover: #79bd5c;
    --pico-primary-hover-background: #79bd5c;
    --pico-primary-focus: #a8d394;
    --pico-primary-inverse: #fff;
}

[data-theme=light],
:root:not([data-theme=dark]) {
  --pico-text-selection-color: rgba(107,180,78, 0.50);
  --pico-primary: #5a9641;
  --pico-primary-background: #4a7a36;
  --pico-primary-underline: #5a9641;
  --pico-primary-hover: #3b612b;
  --pico-primary-hover-background: #6bb44e;
  --pico-primary-focus: #4a7a36;
  --pico-primary-inverse: #fff;
}

#full-footer {
  display:grid;
  grid-template-rows:auto 1fr auto;
  grid-template-columns:100%;
  margin-top: 1.5em;
  min-height:100vh;
  /* new small viewport height for modern browsers */
  min-height:100svh;
}

body {
  margin: 0;
  padding: 0;
  font-size: var(--pico-font-size);
  background-color: var(--pico-background-color, #fff);
  color: var(--pico-color, #11191f);
}

h1, h2, h3 {
  font-weight: 425;
  font-family: "Rubik", sans-serif;
}

h1.home {
  font-weight: 400;
  font-family: "Rubik", sans-serif;
  font-size: clamp(2rem, 5vw, 6rem);
  margin-bottom: 4rem;
}

h1 { 
  font-size: 3rem;
  margin: 1em 0;
  
}

h2 { 
  font-size: 2rem; 
  margin: 1em 0;
}

h3 { 
  font-size: 1.5rem; 
  margin: 1em 0;
}


code {
  font-size: 80%;
}

pre {
  padding: 1rem;
  border-radius: 1rem;
}

blockquote {
  font-style: italic;
}

strong {
  font-weight: 500;
}

hr {
  border-top: 1px solid #999;
}

hr.header {
  margin-bottom: 2rem;
}

header {
  position: sticky;
  top: 0;
  z-index: 1000;
  background-color: #fff; /* For light theme */
  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
}

header nav {
  text-align: right;
  margin-top: 1em;
}

header nav a {
  font-family: "Rubik", sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  margin: 0 0.5rem;
  border: none;
  text-decoration: none;
}

nav {
	display: flex;
	flex-wrap: wrap;
	gap: 0.5rem;
	justify-content: flex-end;
  }

main {
  margin-top: 1.75rem;
}

article header p {
  font-size: 1rem;
  text-align: left;
}

audio {
  width: 100%;
  margin-bottom: var(--pico-typography-spacing-vertical);
}

footer {
  position: sticky;
  background-color: #e9ecef;
  border-top: 1px solid #e9ecef;
  padding: 1em 0;
  font-size: 0.9rem;
}

footer p {
  color: #6c757d;
  line-height: 1.6;
  margin-bottom: 1rem;
}

@media (max-width: 768px) {
  footer {
    padding: 2rem 0;
  }
  
  footer p {
    font-size: 0.9rem;
  }
}

#logo a {
  border: none;
}

#logo img {
  max-width: 50%;
  display: block;
  margin: 0;
}

#hero-image {
  margin-left: 1rem;
  display:block;
}

#hero-image .img {
  vertical-align: middle;
}

.client-logo, .product-logo {
  margin-bottom: 1rem;
  height: auto;
  padding: 1rem 0;
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: center;
}

.client-logo img {
  max-width: 100%;
  max-height: 100%;
  width: 180px;
  height: auto;
  object-fit: contain;
  margin: 0 auto;
  display: block;
}

.product-logo img {
    max-width: 100%;
    max-height: 100%;
    width: 200px;
    height: auto;
    display: block;
  }


#partners h2, #clients h2, #products h2  {
  text-align: left;
  font-size: 1.9rem;
  margin-bottom: 2rem;
  border-top: solid 1.5px #000;
}

.client-logo a:link, a:visited {
  text-decoration: none;
  border: 0;
}

header #logo, header nav {
    text-align: center;
  }

.hero-section {
  padding: 1rem 0 4em;
}

.section-title {
  font-size: 1.875rem;
  text-align: center;
  margin: 2.5rem 0;
}

.service-title {
  font-size: 1.75rem;
  border-radius: 0.375rem;
  text-align: center;
  margin-bottom: 1rem;
}

.service-description {
  font-size: 1rem;
  text-align: left;
}

.consulting:before {
  background-color: #8f2330; /* Red */
}

.training:before {
  background-color: #FFBF00; /* Purple */
}

.design:before {
  background-color: #4682b4; /* Teal */
}

.services:before {
  padding: 0;
  content: '';
  display: block;
  width: 100%;
  height: 26px;
  border-radius: 4px
}

.link {
  color: var(--pico-primary);
  text-decoration: underline;
}

.link:hover {
  color: var(--pico-primary-hover);
  text-decoration: underline;
}

.small {
  font-size: 90%;
}

@media screen and (max-width: 768px) {
  nav {
    justify-content: center;
    width: 100%;
  }
  
  #logo {
    justify-content: center;
    margin-bottom: 1rem;
  }
  
  .middle-lg {
    flex-direction: column;
  }

  #hero-image {
    display: none; 
  }

  .hero-section {
    padding: 1em 0;
  }

  h1.home {
    margin-bottom: 0.5em;
  }

}

